--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                             <img src="images/room3.jpg" alt="">
                         </a>
                     </div>
-                    <div class="sec2_rooms_entrance">
+                    <!-- <div class="sec2_rooms_entrance">
                         <a href="#" class="r4"></a>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
