--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
             <div class="sec1_message">
             </div>
             <div class="sec1_footer">
-                <div class="sec1_footer_help">
-                    <a href="#">帮助</a>
-                </div>
                 <div class="sec1_footer_record">
-                    <a href="#">记录</a>
+                    <a href="#">
+                        <img src="images/record.svg" alt="">
+                    </a>
+                </div>
+                <div class="sec1_footer_help">
+                    <a href="#">
+                        <img src="images/help.svg" alt="">
+                    </a>
                 </div>
             </div>
         </section>
