--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
                 <div class="sec1_footer_record">
                     <a href="#">
                         <img src="images/record.svg" alt="">
+                       记录
                     </a>
                 </div>
                 <div class="sec1_footer_help">
                     <a href="#">
                         <img src="images/help.svg" alt="">
+                        帮助
                     </a>
                 </div>
             </div>
@@ -41,7 +43,9 @@
 
         <section class="sec2">
             <div class="sec2_back">
-                <a href="#">back</a>
+                <a href="#">
+                    <img src="images/back.svg" alt="">
+                </a>
             </div>
             <div class="sec2_content">
 
